Flow measure API resource
